k8s/apps/_retired/miniserve/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: svenstaro/miniserve:0.35.0@sha256:4c52dd31881a59f2da79711c827902c97f3ae531ba143c07cc1ea4f04ec988b3
          args:
            - -D
            - -t
            - files.starry.blue
            - /srv
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: files
              mountPath: /srv/files
              readOnly: true
            - name: mnt
              mountPath: /srv/mnt
              readOnly: true
            - name: konomitv-capture
              mountPath: /srv/konomitv-capture
              readOnly: true
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      volumes:
        - name: files
          hostPath:
            path: /mnt/local/miniserve-files
            type: Directory
        - name: mnt
          hostPath:
            path: /mnt/pool
            type: Directory
        - name: konomitv-capture
          hostPath:
            path: /mnt/local/konomitv/data/capture
            type: Directory
      restartPolicy: Always
      securityContext:
        seccompProfile:
          type: RuntimeDefault
