k8s/apps/_retired/miniserve/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route

spec:
  routes:
    - kind: Rule
      match: Host(`files.starry.blue`)
      services:
        - name: service
          port: 8080
